# WayCap

./: Cargo.toml  README.md  clip.sh
.github/workflows/: clippy.yml
portal-screencast/: Cargo.toml
portal-screencast/src/: lib.rs
src/: app_context.rs  application_config.rs  dbus.rs  ffmpeg_encoder.rs  local_pipewire.rs  main.rs  pipewire_capture.rs  shadow_application.rs  waycap.rs
src/encoders/: audio_encoder.rs  audio_encoder_tests.rs  buffer.rs  buffer_tests.rs  mod.rs  nvenc_encoder.rs  vaapi_encoder.rs  video_encoder.rs
src/modes/: app_mode_variant.rs  mod.rs  shadow_cap.rs
src/pw_capture/: audio_stream.rs  mod.rs  video_stream.rs
