[package]
name = "auto-screen-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
chrono = "0.4.39"
cros-libva = "0.0.13"
ffmpeg-next = { version = "7.1.0", features = ["codec", "format"] }
log = "0.4.25"
nix = "0.29.0"
pipewire = "0.8.0"
portal-screencast = "0.1.0"
procfs = "0.17.0"
simple-logging = "2.0.2"
thiserror = "2.0.11"
tokio = {version = "1.43.0", features = ["full", "rt-multi-thread"] }
zbus = {version = "5.3.1", features = ["tokio"] }
