[package]
name = "auto-screen-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
ffmpeg-next = { version = "7.1.0", features = ["codec", "format"] }
log = "0.4.25"
pipewire = "0.8.0"
portal-screencast = "0.1.0"
simple-logging = "2.0.2"
tokio = {version = "1.43.0", features = ["full", "rt-multi-thread"] }
zbus = {version = "5.3.1", features = ["tokio"] }
