[package]
name = "waycap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
config = "0.15.11"
directories = "6.0.0"
ffmpeg-next = { version = "7.1.0", features = ["codec", "format"] }
log = "0.4.25"
pipewire = "0.8.0"
ringbuf = "0.4.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
simple-logging = "2.0.2"
tokio = {version = "1.43.0", features = ["full", "rt-multi-thread"] }
toml = "0.8.20"
zbus = {version = "5.3.1", features = ["tokio"] }
waycap-rs = "0.1.3"

[profile.dev]
debug = true
opt-level = 0
